Fix Overflow issue
Added:
overflow-wrap: break-word; to text divs.

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -42,6 +42,7 @@ h1, h2 {
   z-index: 10;
   -webkit-text-stroke: 1.5px black;
   padding: 0 15px;
+  overflow-wrap: break-word;
 }
 
 .preview-image {
